--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h1 class="my-name">Konstantin Stoimenov</h1>
         </header>
 
+
         <div class="experience">
             <div class="main-dates">
                 <h2>work experience:</h2>
@@ -84,19 +85,33 @@
                     <div class="scale-line--js"></div>
                 </div>
             </div>
-            <!-- <div class="technologies">
-                <div class="img-container">
-                    <img src="/img/vue.png" alt="vue.js">
-                </div>
-            </div> -->
-
         </div>
 
-    </div>
+        <div class="skills-wrapper">
+            <div class="demo">
+                <h2>JS Frameworks: </h2>
+                <div class="icons">
+                    <img src="/img/vue.png" alt="corel-draw">
+                    <img src="/img/angular.png" alt="ps">
+                </div>
+            </div>
+            <div class="demo">
+                <h2>Design skills: </h2>
+                <div class="icons">
+                    <img src="/img/coreldraw.jpg" alt="corel-draw">
+                    <img src="/img/ps.jpg" alt="ps">
+                    <img src="/img/pr.jpg" alt="pr">
+                    <img src="/img/ae.jpg" alt="ae">
+                    <img src="/img/blender2.png" alt="blender">
+                </div>
+            </div>
+        </div>
 
-    <footer class="footer">
-        <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
-    </footer>
+        <footer class="footer">
+            <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
+        </footer>
+
+    </div>
 
     <script src="script.js"></script>
 
