--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
-                        <div class="experience-details">
+                        <div class="experience-details show-detail">
                             <h4>Bulsatcom</h4>
                             <p>Location: Lyubimets</p>
                         </div>
@@ -85,31 +85,30 @@
                     <div class="scale-line--js"></div>
                 </div>
 
-                <div class="skills-wrapper">
-                    <div class="demo">
-                        <h2>JS Frameworks: </h2>
-                        <div class="icons">
-                            <img src="/img/vue.png" alt="corel-draw">
-                            <img src="/img/angular.png" alt="ps">
-                        </div>
-                    </div>
-                    <div class="demo">
-                        <h2>Design skills: </h2>
-                        <div class="icons">
-                            <img src="/img/coreldraw.jpg" alt="corel-draw">
-                            <img src="/img/ps.jpg" alt="ps">
-                            <img src="/img/pr.jpg" alt="pr">
-                            <img src="/img/ae.jpg" alt="ae">
-                            <img src="/img/blender2.png" alt="blender">
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
         </div>
 
         <footer class="footer">
+            <div class="skills-wrapper">
+                <div class="demo">
+                    <h3>JS Frameworks: </h3>
+                    <div class="icons">
+                        <img src="/img/vue.png" alt="corel-draw">
+                        <img src="/img/angular.png" alt="ps">
+                    </div>
+                </div>
+                <div class="demo">
+                    <h3>Design skills: </h3>
+                    <div class="icons">
+                        <img src="/img/coreldraw.jpg" alt="corel-draw">
+                        <img src="/img/ps.jpg" alt="ps">
+                        <img src="/img/pr.jpg" alt="pr">
+                        <img src="/img/ae.jpg" alt="ae">
+                        <img src="/img/blender2.png" alt="blender">
+                    </div>
+                </div>
+            </div>
             <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
         </footer>
 
