--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     </p>
                 </div>
                 <div class="adv">
-                    <h2>Frontend developer</h2>
+                    <h1 class="my-name">Konstantin Stoimenov</h1>
                 </div>
             </div>
-            <h1 class="my-name">Konstantin Stoimenov</h1>
+            <!-- <h1 class="my-name">Konstantin Stoimenov</h1> -->
         </header>
 
 
@@ -51,7 +51,6 @@
             <div class="main-dates">
                 <h2>work experience:</h2>
                 <ul>
-
                     <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
                         <div class="experience-details show-detail">
@@ -108,8 +107,8 @@
                         <img src="/img/blender2.png" alt="blender">
                     </div>
                 </div>
+                <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
             </div>
-            <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
         </footer>
 
     </div>
