--- a/index.html
+++ b/index.html
@@ -83,7 +83,23 @@
                     <h5>JAVASCRIPT:</h5>
                     <div class="scale-line--js"></div>
                 </div>
-
+                <div class="demo-site">
+                    <div>
+                        <h3>
+                            My demo site made with Angular
+                        </h3>
+                        <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
+                        <div class="demo-site-add-info">
+                            <p>You can login and taste CRUD operations.</p>
+                            <!-- <p>Login with:</p> -->
+                            <p>e-mail: test@abv.bg</p>
+                            <p>password: 111111</p>
+                        </div>
+                    </div>
+                    <!-- <div class="demo-site-img">
+                        <img src="/img/landing3.png" alt="angular">
+                    </div> -->
+                </div>
             </div>
 
         </div>
