--- a/index.html
+++ b/index.html
@@ -89,16 +89,28 @@
                             My demo site made with Angular
                         </h3>
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
-                        <div class="demo-site-add-info">
-                            <p>You can login and taste CRUD operations.</p>
-                            <!-- <p>Login with:</p> -->
-                            <p>e-mail: test@abv.bg</p>
-                            <p>password: 111111</p>
-                        </div>
                     </div>
-                    <!-- <div class="demo-site-img">
-                        <img src="/img/landing3.png" alt="angular">
-                    </div> -->
+                    <div class="demo-site-add-info">
+                        <p>You can login and taste CRUD operations.</p>
+                        <!-- <p>Login with:</p> -->
+                        <p>e-mail: test@abv.bg</p>
+                        <p>password: 111111</p>
+                    </div>
+                </div>
+                <h2 class="gr-design">Graphic and 3d design</h2>
+                <div class="demo-pics">
+                    <div class="panel item1">
+                        <h4>PS</h4>
+                    </div>
+                    <div class="panel item2 active">
+                        <h4>CD</h4>
+                    </div>
+                    <div class="panel item3">
+                        <h4>blender</h4>
+                    </div>
+                    <div class="panel item4">
+                        <h4>blender</h4>
+                    </div>
                 </div>
             </div>
 
