--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         <div class="experience-details show-detail">
                             <h4>Bulsatcom</h4>
                             <p>Location: Lyubimets</p>
+                            <p>Occupation or position held: Satellite TV and internet technician</p>
                         </div>
                     </li>
                     <li class="exp-dates">
