--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             <h4>Bulsatcom</h4>
                             <p>Location: Lyubimets</p>
                             <p>Occupation or position held: Satellite TV and internet technician</p>
+                            <p>Type of business or sector: Telecommunications</p>
                         </div>
                     </li>
                     <li class="exp-dates">
@@ -64,9 +65,37 @@
                         <div class="experience-details">
                             <h4>Skynet</h4>
                             <p>Location: Lyubimets</p>
+                            <p>Occupation or position held: Video editor</p>
+                            <p>Type of business or sector: Arts and entertainment</p>
                         </div>
                     </li>
+                </ul>
+                <h2>Education and training</h2>
+                <ul>
+                    <li class="exp-dates">
+                        <h3>Dates 2018 - Till now</h3>
+                        <div class="experience-details show-detail">
+                            <h4>Softuni</h4>
+                            <p>Title of qualification awarded: Software developer</p>
+                            <p>Principal subjects/occupational skills covered: HTML, css, JavaScript</p>
+                        </div>
+                    </li>
+                </ul>
+                <h2>Languages</h2>
+                <ul>
+                    <li class="exp-dates">
+                        <h3>German</h3>
+                        <div class="experience-details">
+                            <h4>Level: Intermediate</h4>
 
+                        </div>
+                    </li>
+                    <li class="exp-dates">
+                        <h3>English</h3>
+                        <div class="experience-details">
+                            <h4>Level: Intermediate</h4>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
@@ -98,21 +127,24 @@
                         <p>password: 111111</p>
                     </div>
                 </div>
-                <h2 class="gr-design">Graphic and 3d design</h2>
-                <div class="demo-pics">
-                    <div class="panel item1">
-                        <h4>PS</h4>
-                    </div>
-                    <div class="panel item2 active">
-                        <h4>CD</h4>
-                    </div>
-                    <div class="panel item3">
-                        <h4>blender</h4>
-                    </div>
-                    <div class="panel item4">
-                        <h4>blender</h4>
+                <div class="gr-design-wrapper">
+                    <h2 class="gr-design">Graphic and 3d design</h2>
+                    <div class="demo-pics">
+                        <div class="panel item1">
+                            <h4>Photoshop</h4>
+                        </div>
+                        <div class="panel item2 active">
+                            <h4>CorelDRAW</h4>
+                        </div>
+                        <div class="panel item3">
+                            <h4>blender</h4>
+                        </div>
+                        <div class="panel item4">
+                            <h4>blender</h4>
+                        </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
