--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <h4>CorelDRAW</h4>
                         </div>
                         <div class="panel item3">
-                            <h4>blender</h4>
+                            <a href="https://youtu.be/qwIZyIhrzQ4" target="_blank">blender - open video</a>
                         </div>
                         <div class="panel item4">
                             <h4>blender</h4>
