--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="experience">
             <div class="main-dates">
-                <h2>work experience:</h2>
+                <h2>work experience</h2>
                 <ul>
                     <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
