--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                         <div class="panel item4">
                             <h4>blender</h4>
                         </div>
+                        <!-- <div class="panel item5">
+                            <h4>Photoshop</h4>
+                        </div> -->
                     </div>
                 </div>
 
