demo site password

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
                     </div>
                     <div class="demo-site-add-info">
-                        <p>You can login and taste CRUD operations.</p>
+                        <!-- <p>You can login and taste CRUD operations.</p> -->
                         <!-- <p>Login with:</p> -->
-                        <p>e-mail: test@abv.bg</p>
-                        <p>password: 111111</p>
+                        <p>e-mail: <span>test@abv.bg</span></p>
+                        <p>password: <span>111111</span></p>
                     </div>
                 </div>
                 <div class="gr-design-wrapper">
