--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="experience">
             <div class="main-dates">
-                <h2>work experience</h2>
+                <h2>Work experience</h2>
                 <ul>
                     <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
@@ -86,14 +86,13 @@
                     <li class="exp-dates">
                         <h3>German</h3>
                         <div class="experience-details">
-                            <h4>Level: Intermediate</h4>
-
+                            <p>Level: Intermediate</p>
                         </div>
                     </li>
                     <li class="exp-dates">
                         <h3>English</h3>
                         <div class="experience-details">
-                            <h4>Level: Intermediate</h4>
+                            <p>Level: Intermediate</p>
                         </div>
                     </li>
                 </ul>
