--- a/index.html
+++ b/index.html
@@ -100,17 +100,23 @@
 
             <div class="details">
                 <h2>Computer skills and competences:</h2>
-                <div class="scale-item">
-                    <h5>HTML:</h5>
-                    <div class="scale-line--html"></div>
+                <div class="item-wrapper">
+                    <div class="scale-item">
+                        <h5>HTML:</h5>
+                        <div class="scale-line--html"></div>
+                    </div>
                 </div>
-                <div class="scale-item">
-                    <h5>CSS:</h5>
-                    <div class="scale-line--css"></div>
+                <div class="item-wrapper">
+                    <div class="scale-item">
+                        <h5>CSS:</h5>
+                        <div class="scale-line--css"></div>
+                    </div>
                 </div>
-                <div class="scale-item">
-                    <h5>JAVASCRIPT:</h5>
-                    <div class="scale-line--js"></div>
+                <div class="item-wrapper">
+                    <div class="scale-item">
+                        <h5>JAVASCRIPT:</h5>
+                        <div class="scale-line--js"></div>
+                    </div>
                 </div>
                 <div class="demo-site">
                     <div>
