--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="experience-details show-detail">
                             <h4>Softuni</h4>
                             <p>Title of qualification awarded: Software developer</p>
-                            <p>Principal subjects/occupational skills covered: HTML, css, JavaScript</p>
+                            <p>Principal subjects/occupational skills covered: HTML, CSS, JavaScript</p>
                         </div>
                     </li>
                 </ul>
@@ -132,7 +132,27 @@
                         <p>password: <span>111111</span></p>
                     </div>
                 </div>
-                <div class="gr-design-wrapper">
+
+                <div class="skills-wrapper">
+                    <div class="demo">
+                        <h3>JS Frameworks: </h3>
+                        <div class="icons">
+                            <img src="/img/vue.png" alt="corel-draw">
+                            <img src="/img/angular.png" alt="ps">
+                        </div>
+                    </div>
+                    <div class="demo">
+                        <h3>Design skills: </h3>
+                        <div class="icons">
+                            <img src="/img/coreldraw.jpg" alt="corel-draw">
+                            <img src="/img/ps.jpg" alt="ps">
+                            <img src="/img/pr.jpg" alt="pr">
+                            <img src="/img/ae.jpg" alt="ae">
+                            <img src="/img/blender2.png" alt="blender">
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="gr-design-wrapper">
                     <h2 class="gr-design">Graphic and 3d design</h2>
                     <div class="demo-pics">
                         <div class="panel item1 active">
@@ -146,38 +166,17 @@
                         </div>
                         <div class="panel item4">
                             <h4>blender</h4>
-                        </div>
-                        <!-- <div class="panel item5">
-                            <h4>Photoshop</h4>
-                        </div> -->
+                        </div>                        
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
         </div>
 
         <footer class="footer">
-            <div class="skills-wrapper">
-                <div class="demo">
-                    <h3>JS Frameworks: </h3>
-                    <div class="icons">
-                        <img src="/img/vue.png" alt="corel-draw">
-                        <img src="/img/angular.png" alt="ps">
-                    </div>
-                </div>
-                <div class="demo">
-                    <h3>Design skills: </h3>
-                    <div class="icons">
-                        <img src="/img/coreldraw.jpg" alt="corel-draw">
-                        <img src="/img/ps.jpg" alt="ps">
-                        <img src="/img/pr.jpg" alt="pr">
-                        <img src="/img/ae.jpg" alt="ae">
-                        <img src="/img/blender2.png" alt="blender">
-                    </div>
-                </div>
-                <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
-            </div>
+
+            <p>2021 &copy; Copyright Ltd. All rights reserved.</p>
         </footer>
 
     </div>
