--- a/index.html
+++ b/index.html
@@ -137,20 +137,28 @@
                     <div class="demo">
                         <h3>JS Frameworks: </h3>
                         <div class="icons">
-                            <img src="/img/vue.png" alt="corel-draw">
-                            <img src="/img/angular.png" alt="ps">
+                            <div class="icon-stars-wrapper">
+                                <!-- <img src="/img/vue.png" alt="angular"> -->
+                                <h4 class="prog">Angular: </h4>
+                                <div class="star star-fill"></div>
+                                <div class="star star-fill"></div>
+                                <div class="star star-fill"></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                            </div>
+                            <div class="icon-stars-wrapper">
+                                <!-- <img src="/img/angular.png" alt="vue"> -->
+                                <h4 class="prog">Vue: </h4>
+                                <div class="star star-fill"></div>
+                                <div class="star star-fill"></div>
+                                <div class="star "></div>
+                                <div class="star"></div>
+                                <div class="star"></div>
+                            </div>
+
                         </div>
                     </div>
-                    <div class="demo">
-                        <h3>Design skills: </h3>
-                        <div class="icons">
-                            <img src="/img/coreldraw.jpg" alt="corel-draw">
-                            <img src="/img/ps.jpg" alt="ps">
-                            <img src="/img/pr.jpg" alt="pr">
-                            <img src="/img/ae.jpg" alt="ae">
-                            <img src="/img/blender2.png" alt="blender">
-                        </div>
-                    </div>
+
                 </div>
                 <!-- <div class="gr-design-wrapper">
                     <h2 class="gr-design">Graphic and 3d design</h2>
