--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
                 <div class="skills-wrapper">
                     <div class="demo">
-                        <h3>JS Frameworks: </h3>
+                        <div class="demo-title">
+                            <h3>JS Frameworks: </h3>
+                        </div>
                         <div class="icons">
                             <div class="icon-stars-wrapper">
                                 <!-- <img src="/img/vue.png" alt="angular"> -->
