css animate stars

--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
                             <div class="icon-stars-wrapper">
                                 <!-- <img src="/img/vue.png" alt="angular"> -->
                                 <h4 class="prog">Angular: </h4>
-                                <div class="star star-fill"></div>
-                                <div class="star star-fill"></div>
-                                <div class="star star-fill"></div>
+                                <div class="star star-fill angular"></div>
+                                <div class="star star-fill angular"></div>
+                                <div class="star star-fill angular"></div>
                                 <div class="star"></div>
                                 <div class="star"></div>
                             </div>
                             <div class="icon-stars-wrapper">
                                 <!-- <img src="/img/angular.png" alt="vue"> -->
                                 <h4 class="prog">Vue: </h4>
-                                <div class="star star-fill"></div>
-                                <div class="star star-fill"></div>
+                                <div class="star star-fill vue"></div>
+                                <div class="star star-fill vue"></div>
                                 <div class="star "></div>
                                 <div class="star"></div>
                                 <div class="star"></div>
