--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul>
                     <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
-                        <div class="experience-details show-detail">
+                        <div class="experience-details">
                             <h4>Bulsatcom</h4>
                             <p>Location: Lyubimets</p>
                             <p>Occupation or position held: Satellite TV and internet technician</p>
@@ -74,7 +74,7 @@
                 <ul>
                     <li class="exp-dates">
                         <h3>Dates 2018 - Till now</h3>
-                        <div class="experience-details show-detail">
+                        <div class="experience-details">
                             <h4>Softuni</h4>
                             <p>Title of qualification awarded: Software developer</p>
                             <p>Principal subjects/occupational skills covered: HTML, CSS, JavaScript</p>
