--- a/index.html
+++ b/index.html
@@ -55,18 +55,24 @@
                         <h3>Dates 2015 - 2021</h3>
                         <div class="experience-details">
                             <h4>Bulsatcom</h4>
-                            <p>Location: Lyubimets</p>
-                            <p>Occupation or position held: Satellite TV and internet technician</p>
-                            <p>Type of business or sector: Telecommunications</p>
+                            <p>Location:
+                                <span class="data">Lyubimets</span>
+                            </p>
+                            <p>Occupation or position held:
+                                <span class="data">Satellite TV and internet technician</span>
+                            </p>
+                            <p>Type of business or sector:
+                                <span class="data">Telecommunications</span>
+                            </p>
                         </div>
                     </li>
                     <li class="exp-dates">
                         <h3>Dates 1998 - 2015</h3>
                         <div class="experience-details">
                             <h4>Skynet</h4>
-                            <p>Location: Lyubimets</p>
-                            <p>Occupation or position held: Video editor</p>
-                            <p>Type of business or sector: Arts and entertainment</p>
+                            <p>Location: <span class="data">Lyubimets</span></p>
+                            <p>Occupation or position held: <span class="data">Video editor</span></p>
+                            <p>Type of business or sector:<span class="data"> Arts and entertainment</span></p>
                         </div>
                     </li>
                 </ul>
@@ -76,8 +82,9 @@
                         <h3>Dates 2018 - Till now</h3>
                         <div class="experience-details">
                             <h4>Softuni</h4>
-                            <p>Title of qualification awarded: Software developer</p>
-                            <p>Principal subjects/occupational skills covered: HTML, CSS, JavaScript</p>
+                            <p>Title of qualification awarded: <span class="data">Software developer</span></p>
+                            <p>Principal subjects/occupational skills covered: <span class="data">HTML, CSS,
+                                    JavaScript</span></p>
                         </div>
                     </li>
                 </ul>
