--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         <div class="experience-details">
                             <h4>Bulsatcom</h4>
                             <p>Location:
-                                <span class="data">Lyubimets</span>
+                            <p class="data">Lyubimets</p>
                             </p>
                             <p>Occupation or position held:
-                                <span class="data">Satellite TV and internet technician</span>
+                            <p class="data">Satellite TV and internet technician</p>
                             </p>
                             <p>Type of business or sector:
-                                <span class="data">Telecommunications</span>
+                            <p class="data">Telecommunications</p>
                             </p>
                         </div>
                     </li>
@@ -70,9 +70,15 @@
                         <h3>Dates 1998 - 2015</h3>
                         <div class="experience-details">
                             <h4>Skynet</h4>
-                            <p>Location: <span class="data">Lyubimets</span></p>
-                            <p>Occupation or position held: <span class="data">Video editor</span></p>
-                            <p>Type of business or sector:<span class="data"> Arts and entertainment</span></p>
+                            <p>Location:
+                            <p class="data">Lyubimets</p>
+                            </p>
+                            <p>Occupation or position held:
+                            <p class="data">Video editor</p>
+                            </p>
+                            <p>Type of business or sector:
+                            <p class="data"> Arts and entertainment</p>
+                            </p>
                         </div>
                     </li>
                 </ul>
@@ -82,9 +88,13 @@
                         <h3>Dates 2018 - Till now</h3>
                         <div class="experience-details">
                             <h4>Softuni</h4>
-                            <p>Title of qualification awarded: <span class="data">Software developer</span></p>
-                            <p>Principal subjects/occupational skills covered: <span class="data">HTML, CSS,
-                                    JavaScript</span></p>
+                            <p>Title of qualification awarded:
+                            <p class="data">Software developer</p>
+                            </p>
+                            <p>Principal subjects/occupational skills covered:
+                            <p class="data">HTML, CSS,
+                                JavaScript</p>
+                            </p>
                         </div>
                     </li>
                 </ul>
