--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="my-name">Konstantin Stoimenov</h1>
                 </div>
             </div>
-            <!-- <h1 class="my-name">Konstantin Stoimenov</h1> -->
+
         </header>
 
 
@@ -167,7 +167,7 @@
                             </div>
                             <div class="icon-stars-wrapper">
                                 <!-- <img src="/img/angular.png" alt="vue"> -->
-                                <h4 class="prog">Vue: </h4>
+                                <h4 class="prog">Vue.js: </h4>
                                 <div class="star star-fill vue"></div>
                                 <div class="star star-fill vue"></div>
                                 <div class="star "></div>
@@ -179,23 +179,6 @@
                     </div>
 
                 </div>
-                <!-- <div class="gr-design-wrapper">
-                    <h2 class="gr-design">Graphic and 3d design</h2>
-                    <div class="demo-pics">
-                        <div class="panel item1 active">
-                            <h4>Photoshop</h4>
-                        </div>
-                        <div class="panel item2">
-                            <h4>CorelDRAW</h4>
-                        </div>
-                        <div class="panel item3">
-                            <a href="https://youtu.be/qwIZyIhrzQ4" target="_blank">blender - open video</a>
-                        </div>
-                        <div class="panel item4">
-                            <h4>blender</h4>
-                        </div>                        
-                    </div>
-                </div> -->
 
             </div>
 
