--- a/index.html
+++ b/index.html
@@ -138,13 +138,12 @@
                 <div class="demo-site">
                     <div>
                         <h3>
-                            My demo site made with Angular
+                            My Angular demo site
                         </h3>
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
                     </div>
                     <div class="demo-site-add-info">
-                        <!-- <p>You can login and taste CRUD operations.</p> -->
-                        <!-- <p>Login with:</p> -->
+                        <p>You can login with:</p>
                         <p>e-mail: <span>test@abv.bg</span></p>
                         <p>password: <span>111111</span></p>
                     </div>
