--- a/index.html
+++ b/index.html
@@ -136,9 +136,15 @@
                     </div>
                 </div>
                 <div class="demo-site">
-                    <div>
+                    <div class="demo-site-item">
                         <h3>
-                            My Angular demo site
+                            Vanilla JavaScript and SVG:
+                        </h3>
+                        <a href="#" target="_blank">Hangman game</a>
+                    </div>
+                    <div class="demo-site-item">
+                        <h3>
+                            My Angular demo site:
                         </h3>
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
                     </div>
