--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <h3>
                             Vanilla JavaScript and SVG:
                         </h3>
-                        <a href="#" target="_blank">Hangman game</a>
+                        <a href="./hangman/game.html" target="_blank">Hangman game</a>
                     </div>
                     <div class="demo-site-item">
                         <h3>
