--- a/hangman/game.html
+++ b/hangman/game.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-    <input class="keyboard" type="text" autofocus>
+    <input class="keyboard" id="keyboard" type="text" autofocus>
 
 
     <script src="./script.js"></script>
