--- a/hangman/game.html
+++ b/hangman/game.html
@@ -60,7 +60,7 @@
         <div class="word">
 
             <H2 class="guess"></H2>
-            <input class="keyboard" id="keyboard" type="text" autofocus>
+            <input class="keyboard" id="keyboard" type="text">
         </div>
         <div class="popup-container">
             <div class="popup">
