next icon changed

--- a/hangman/game.html
+++ b/hangman/game.html
@@ -83,17 +83,19 @@
             <div class="word-container">
                 <div class="reload-word">
                     <div class="reload">
-                        <svg clip-rule="evenodd" fill-rule="evenodd" version="1.1" viewBox="0 0 9.2628 5.3374"
+                        <svg clip-rule="evenodd" fill-rule="evenodd" version="1.1" viewBox="0 0 12.769 12.701"
                             xmlns="http://www.w3.org/2000/svg">
-                            <g class="icon" transform="matrix(.37159 0 0 .41535 0 -.2111)">
-                                <path id="arrow"
-                                    d="m24.891 7.8855c-0.034817 0.35728-1.7217 0.46801-2.0059 0.07016 0.51881-1.0336 0.11504-1.7969 0.11504-1.7969-1.853 4.237-6.083 7.2-11 7.2-6.623 0-12-8.6885-12-12 0.40123-0.88013 2.8577-0.55814 2.9542-0.00642 0.62602 3.5778 3.3188 8.8302 8.9887 9.3467 3.8158 0.34759 7.3401-1.4793 8.9421-5.5753 0 0-0.94543-0.40085-1.587 0.11652-0.25745 0.20762-0.96807-1.6711-0.65987-1.7911 1.0595-0.41248 4.6496-0.87636 4.6496-0.87636s1.927 1.9886 1.6031 5.3127z"
-                                    style="fill:#280b0b" />
-                                <text id="next" transform="scale(1.0608 .94269)" x="3.7116997" y="4.8876705"
-                                    style="fill:#280b0b;font-family:sans-serif;font-size:6.1932px;line-height:1.25;stroke-width:.58061"
+                            <g id="arrows" transform="translate(.00051349 -.00027071)">
+                                <path id="arrow-top"
+                                    d="m0.013369 2.9967c0.012939-0.1484 0.63977-0.19439 0.74537-0.029141-0.19278 0.42931-0.042748 0.74634-0.042748 0.74634 0.68856-1.7598 2.9429-3.7331 5.4182-3.7135 3.4775 0.027534 5.9715 2.2841 6.4761 5.1188-0.14909 0.36556-1.7588 0.68271-1.8277 0.4612-0.54765-1.7608-2.4049-4.0539-4.7943-4.124-1.5045-0.044148-3.1213 0.23192-4.4862 2.6875 0 0 0.35131 0.16649 0.58971-0.048397 0.095666-0.086235 0.33997 0.66257 0.2452 0.74393-0.39218 0.33666-1.7488 0.50752-1.7488 0.50752s-0.69498-0.96951-0.57463-2.3502z"
+                                    style="fill:#280b0b;stroke-width:.39286" />
+                                <path id="arrow-down"
+                                    d="m12.755 9.7051c-0.01294 0.1484-0.63977 0.19439-0.74537 0.029141 0.19278-0.42931 0.042748-0.74634 0.042748-0.74634-0.68856 1.7598-2.9429 3.7331-5.4182 3.7135-3.4775-0.027532-5.9715-2.2841-6.4761-5.1188 0.14909-0.36556 1.7588-0.68271 1.8277-0.4612 0.54765 1.7608 2.4049 4.0539 4.7943 4.124 1.5045 0.04415 3.1213-0.23192 4.4862-2.6875 0 0-0.35131-0.16649-0.58971 0.048397-0.09567 0.086235-0.33997-0.66257-0.2452-0.74393 0.39218-0.33666 1.7488-0.50752 1.7488-0.50752s0.69498 0.96951 0.57463 2.3502z"
+                                    style="fill:#280b0b;stroke-width:.39286" />
+                                <text id="next" transform="scale(1.0151 .98511)" x="2.0744836" y="7.5208812"
+                                    style="fill:#2b0000;font-family:sans-serif;font-size:3.7205px;line-height:1.25;stroke-width:.46506"
                                     xml:space="preserve">
-                                    <tspan x="3.7116997" y="4.8876705" style="fill:#280b0b;stroke-width:.58061">next
-                                    </tspan>
+                                    <tspan x="2.0744836" y="7.5208812" style="stroke-width:.46506">next</tspan>
                                 </text>
                             </g>
                         </svg>
