--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
                     </div>
                     <div class="demo-site-item">
                         <h3>
+                            Desktop puzzle game
+                        </h3>
+                        <h6>Vanilla JavaScript, OOP, drag and drop :</h6>
+                        <a href="./puzzle/index.html" target="_blank">Puzzle game</a>
+                    </div>
+                    <div class="demo-site-item">
+                        <h3>
                             My Angular demo site:
                         </h3>
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
