--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -13,7 +13,7 @@
     <div class="winner">
         <h1>Congratulations!</h1>
     </div>
-    <h2>drag and drop</h2>
+    <h2>Use drag and drop or tap over</h2>
     <div id="puzzle">
 
     </div>
