--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                     <div class="demo-site-item">
                         <h3>
-                            Desktop puzzle game
+                            Puzzle game
                         </h3>
                         <h6>Vanilla JavaScript, OOP, drag and drop :</h6>
                         <a href="./puzzle/index.html" target="_blank">Puzzle game</a>
