--- a/index.html
+++ b/index.html
@@ -137,15 +137,10 @@
                 </div>
                 <div class="demo-site">
                     <div class="demo-site-item">
-                        <h3>
-                            Vanilla JavaScript and SVG:
-                        </h3>
+                        <h6>Vanilla JavaScript and SVG:</h6>
                         <a href="./hangman/game.html" target="_blank">Hangman game</a>
                     </div>
                     <div class="demo-site-item">
-                        <h3>
-                            Puzzle game
-                        </h3>
                         <h6>Vanilla JavaScript, OOP, drag and drop :</h6>
                         <a href="./puzzle/index.html" target="_blank">Puzzle game</a>
                     </div>
