--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="how">
+        <div class="icons"></div>
+        <div class="icons"></div>
+    </div>
     <div class="winner">
         <h1>Congratulations!</h1>
     </div>
