--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                 </div>
                 <div class="demo-site">
                     <div class="demo-site-item">
-                        <h6>Vanilla JavaScript and SVG:</h6>
-                        <a href="./hangman/game.html" target="_blank">Hangman game</a>
-                    </div>
-                    <div class="demo-site-item">
-                        <h6>Vanilla JavaScript, OOP, drag and drop :</h6>
-                        <a href="./puzzle/index.html" target="_blank">Puzzle game</a>
+                        <h6>Vanilla JavaScript gmes</h6>
+                        <div class="demo-site-item-links">
+                            <a href="./hangman/game.html" target="_blank">Hangman</a>
+                            <a href="./puzzle/index.html" target="_blank">Puzzle</a>
+                            <a href="./memo/index.html" target="_blank">Memory</a>
+                        </div>
                     </div>
                     <div class="demo-site-item">
                         <h3>
