--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="demo-site">
                     <div class="demo-site-item">
-                        <h6>Vanilla JavaScript gmes</h6>
+                        <h3>Vanilla JavaScript gmes:</h3>
                         <div class="demo-site-item-links">
                             <a href="./hangman/game.html" target="_blank">Hangman</a>
                             <a href="./puzzle/index.html" target="_blank">Puzzle</a>
@@ -147,15 +147,16 @@
                     </div>
                     <div class="demo-site-item">
                         <h3>
-                            My Angular demo site:
+                            Angular demo site:
                         </h3>
                         <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
+                        <div class="demo-site-add-info">
+                            <p>You can login with:</p>
+                            <p>e-mail: <span>test@abv.bg</span></p>
+                            <p>password: <span>111111</span></p>
+                        </div>
                     </div>
-                    <div class="demo-site-add-info">
-                        <p>You can login with:</p>
-                        <p>e-mail: <span>test@abv.bg</span></p>
-                        <p>password: <span>111111</span></p>
-                    </div>
+
                 </div>
 
                 <div class="skills-wrapper">
