--- a/memo/index.html
+++ b/memo/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="timer">
+        <p class="time">40</p>
+    </div>
     <div class="wrapper">
         <div class="game-over">
             <div class="game-message">
