--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="demo-site">
                     <div class="demo-site-item">
-                        <h3>Vanilla JavaScript gmes:</h3>
+                        <h3>Vanilla JavaScript games:</h3>
                         <div class="demo-site-item-links">
                             <a href="./hangman/game.html" target="_blank">Hangman</a>
                             <a href="./puzzle/index.html" target="_blank">Puzzle</a>
