--- a/mogo/index.html
+++ b/mogo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -55,7 +55,7 @@
                             <div class="search-shop">
                                 <div class="shopping-card">
                                     <svg width="18.458" height="15.468" enable-background="new 0 0 100 100"
-                                        version="1.0" viewBox="0 0 6.1526 5.1561" xmlns="http://www.w3.org/2000/svg">
+                                        version="1.1" viewBox="0 0 6.1526 5.1561" xmlns="http://www.w3.org/2000/svg">
                                         <g transform="translate(-24.675 -46.424)">
                                             <path id="shopping"
                                                 d="m30.827 47.259h-4.6587l-0.06041-0.23c-0.18184-0.70629-1.0655-0.82829-1.402-0.1862-0.14081 0.2689 0.22911 0.49937 0.36998 0.23047 0.14859-0.2835 0.54245-0.22946 0.6223 0.0827l0.91379 3.4821c-0.09928-0.16136-0.26798-0.26762-0.45946-0.26762-0.30538 0-0.55294 0.26997-0.55294 0.60273 0 0.33303 0.24756 0.60314 0.55294 0.60314 0.30538 0 0.55275-0.27011 0.55275-0.60314 0-0.0465-0.0053-0.09131-0.01438-0.13472h2.1208c-0.0096 0.04428-0.01518 0.09044-0.01518 0.13828 0 0.33303 0.24744 0.603 0.55282 0.603 0.30532 0 0.55288-0.26997 0.55288-0.603 0-0.32939-0.24232-0.5964-0.54331-0.60233-0.0024 0-0.0047-7.94e-4 -0.0075-7.94e-4h-2.3658l-0.12039-0.45893 3.743-0.63294zm-0.60397 1.6178-3.476 0.58746-0.4568-1.7408h4.0576z"
@@ -127,9 +127,6 @@
 
             </div>
 
-
-
-
         </header>
         <!-- end header -->
         <!-- main -->
@@ -145,25 +142,7 @@
                     ullamco
                     laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="about-image-container">
-                    <!-- <div class="about-img first">
-                        <div class="about-team-effect">
-                            <div class="users-svg"></div>
-                            <p class="super-team-text">SUPER TEAM</p>
-                        </div>
-                    </div> -->
 
-                    <!-- <div class="about-card-item">
-                        <div class="about-img-wrapper">
-                            <img src="./assets/about-pic1.jpg" alt="">
-                            <div class="inset"></div>
-                            <div class="overlay"></div>
-                            <div class="about-team-effect">
-                                <div class="users-svg"></div>
-                                <p class="super-team-text">SUPER TEAM</p>
-                            </div>
-                        </div>
-
-                    </div> -->
                     <div class="about-card-item about-card-hover">
                         <div class="about-img-wrapper">
                             <img src="./assets/about-pic1.jpg" alt="">
@@ -617,7 +596,7 @@
             </section>
             <!-- end team section -->
             <!-- brands section -->
-            <section class="brands">
+            <div class="brands">
                 <div class="inner-brands">
                     <div class="brand-logo-container">
                         <div class="brand-logo logo1"></div>
@@ -628,7 +607,7 @@
                         <div class="brand-logo logo6"></div>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- end brands section -->
             <!-- start examples section -->
             <section class="examples">
@@ -955,13 +934,14 @@
             <section class="map">
                 <div class="map-content">
                     <div>
-                        <i class="fas fa-map-marker-alt fa-2x"></i>
+                        <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div>
                         <a href="https://www.google.com/maps" target="_blank" rel="noopener noreferrer">
                             <h4 class="map-heading">Open map</h4>
                         </a>
                     </div>
+                    <div class="map-delimiter"></div>
                 </div>
             </section>
             <!-- end Map section -->
