--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
                 <h2>Work experience</h2>
                 <ul>
                     <li class="exp-dates">
+                        <h3>Dates June 2021 - September 2021</h3>
+                        <div class="experience-details show-detail">
+                            <h4>Pliant</h4>
+                            <p>Location:
+                            <p class="data">Sofia</p>
+                            </p>
+                            <p>Occupation or position held:
+                            <p class="data">Angular internship</p>
+                            </p>
+                            <p>Type of business or sector:
+                            <p class="data">Frontend Development</p>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="exp-dates">
                         <h3>Dates 2015 - 2021</h3>
                         <div class="experience-details">
                             <h4>Bulsatcom</h4>
@@ -138,6 +153,12 @@
                 </div>
                 <div class="demo-site">
                     <div class="demo-site-item">
+                        <h3>Html, CSS and JavaScript site:</h3>
+                        <div class="demo-site-item-links">
+                            <a href="./mogo/index.html" target="_blank">MoGo</a>
+                        </div>
+                    </div>
+                    <div class="demo-site-item">
                         <h3>Vanilla JavaScript games:</h3>
                         <div class="demo-site-item-links">
                             <a href="./hangman/game.html" target="_blank">Hangman</a>
@@ -166,7 +187,6 @@
                         </div>
                         <div class="icons">
                             <div class="icon-stars-wrapper">
-                                <!-- <img src="/img/vue.png" alt="angular"> -->
                                 <h4 class="prog">Angular: </h4>
                                 <div class="star star-fill angular"></div>
                                 <div class="star star-fill angular"></div>
@@ -174,16 +194,6 @@
                                 <div class="star"></div>
                                 <div class="star"></div>
                             </div>
-                            <div class="icon-stars-wrapper">
-                                <!-- <img src="/img/angular.png" alt="vue"> -->
-                                <h4 class="prog">Vue.js: </h4>
-                                <div class="star star-fill vue"></div>
-                                <div class="star star-fill vue"></div>
-                                <div class="star "></div>
-                                <div class="star"></div>
-                                <div class="star"></div>
-                            </div>
-
                         </div>
                     </div>
 
