add github and bitbucket, change css

--- a/index.html
+++ b/index.html
@@ -26,16 +26,29 @@
                     <h2 class="personal-details">Personal Details:</h2>
                     <p class="contact-item">
 
-                        <a href="mailto:teddy2@abv.bg"><i class="far fa-envelope fa-2x"></i>
+                        <a href="mailto:teddy2@abv.bg"><i class="far fa-envelope"></i>
                             <span>
                                 teddy2@abv.bg
                             </span>
                         </a>
 
                         <a href="https://www.linkedin.com/in/konstantin-stoimenov-1bb764150/" target="_blank">
-                            <i class="fab fa-linkedin fa-2x"></i>
+                            <i class="fab fa-linkedin"></i>
                             <span>
                                 LinkedIn
+                            </span>
+                        </a>
+
+                        <a href="https://bitbucket.org/tedo74/" target="_blank">
+                            <i class="fab fa-bitbucket"></i>
+                            <span>
+                                Bitbucket
+                            </span>
+                        </a>
+                        <a href="https://github.com/Tedo74" target="_blank">
+                            <i class="fab fa-github"></i>
+                            <span>
+                                GitHub
                             </span>
                         </a>
                     </p>
