--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h2>Work experience</h2>
                 <ul>
                     <li class="exp-dates">
-                        <h3>Dates June 2021 - September 2021</h3>
+                        <h3>June 2021 - September 2021</h3>
                         <div class="experience-details show-detail">
                             <h4>Pliant</h4>
                             <p>Location:
@@ -81,7 +81,7 @@
                         </div>
                     </li>
                     <li class="exp-dates">
-                        <h3>Dates 2015 - 2021</h3>
+                        <h3>2015 - 2021</h3>
                         <div class="experience-details">
                             <h4>Bulsatcom</h4>
                             <p>Location:
@@ -96,7 +96,7 @@
                         </div>
                     </li>
                     <li class="exp-dates">
-                        <h3>Dates 1998 - 2015</h3>
+                        <h3>1998 - 2015</h3>
                         <div class="experience-details">
                             <h4>Skynet</h4>
                             <p>Location:
@@ -114,7 +114,7 @@
                 <h2>Education and training</h2>
                 <ul>
                     <li class="exp-dates">
-                        <h3>Dates 2018 - Till now</h3>
+                        <h3>2019 - Till now</h3>
                         <div class="experience-details">
                             <h4>Softuni</h4>
                             <p>Title of qualification awarded:
