--- a/eng/irregular.html
+++ b/eng/irregular.html
@@ -11,9 +11,18 @@
     <h3 class="heading">Irregular Verbs</h3>
     <h4 class="heading congrats hide">Congratulations!</h4>
     <div class="forms-wrapper">
-      <input id="first" type="text" />
-      <input id="second" type="text" />
-      <input id="third" type="text" />
+      <div class="input-wrapper">
+        <label for="first">Infinitive</label>
+        <input id="first" type="text" />
+      </div>
+      <div class="input-wrapper">
+        <label for="second">Simple Past</label>
+        <input id="second" type="text" />
+      </div>
+      <div class="input-wrapper">
+        <label for="third">Past Participate</label>
+        <input id="third" type="text" />
+      </div>
       <div class="buttons">
         <button id="changeVerb">next verb</button>
         <button id="check">check</button>
