--- a/eng/irregular.html
+++ b/eng/irregular.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2 class="heading">Irregular Verbs</h2>
-    <h4 class="heading congrats hide">Congratulations!</h4>
     <div class="forms-wrapper">
+      <div class="message hide">
+        <h2>Congratulations!</h2>
+      </div>
+
       <div class="input-wrapper">
         <label for="first">Infinitive</label>
         <input id="first" type="text" />
@@ -29,6 +31,7 @@
         <button id="solution">solution</button>
       </div>
     </div>
+    <h2 class="heading">Irregular Verbs</h2>
 
     <script src="irregular.js"></script>
   </body>
