--- a/eng/irregular.html
+++ b/eng/irregular.html
@@ -15,15 +15,15 @@
 
       <div class="input-wrapper">
         <label for="first">Infinitive</label>
-        <input id="first" type="text" />
+        <input id="first" type="text" autocomplete="off" />
       </div>
       <div class="input-wrapper">
         <label for="second">Simple Past</label>
-        <input id="second" type="text" />
+        <input id="second" type="text" autocomplete="off" />
       </div>
       <div class="input-wrapper">
         <label for="third">Past Participate</label>
-        <input id="third" type="text" />
+        <input id="third" type="text" autocomplete="off" />
       </div>
       <div class="buttons">
         <button id="changeVerb">next verb</button>
