add verbs link to cv page

--- a/index.html
+++ b/index.html
@@ -174,9 +174,12 @@
                     <div class="demo-site-item">
                         <h3>Vanilla JavaScript games:</h3>
                         <div class="demo-site-item-links">
-                            <a href="./hangman/game.html" target="_blank">Hangman</a>
                             <a href="./puzzle/index.html" target="_blank">Puzzle</a>
                             <a href="./memo/index.html" target="_blank">Memory</a>
+                        </div>
+                        <div class="demo-site-item-links">
+                            <a href="./eng/irregular.html" target="_blank">Verbs</a>
+                            <a href="./hangman/game.html" target="_blank">Hangman</a>
                         </div>
                     </div>
                     <div class="demo-site-item">
