Update current pos

--- a/index.html
+++ b/index.html
@@ -66,8 +66,23 @@
                 <h2>Work experience</h2>
                 <ul>
                     <li class="exp-dates">
-                        <h3>June 2021 - September 2021</h3>
+                        <h3>November 2021 - Till now</h3>
                         <div class="experience-details show-detail">
+                            <h4>Pliant</h4>
+                            <p>Location:
+                            <p class="data">Sofia</p>
+                            </p>
+                            <p>Occupation or position held:
+                            <p class="data">Frontend developer - Angular</p>
+                            </p>
+                            <p>Type of business or sector:
+                            <p class="data">Frontend Development</p>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="exp-dates">
+                        <h3>June 2021 - September 2021</h3>
+                        <div class="experience-details">
                             <h4>Pliant</h4>
                             <p>Location:
                             <p class="data">Sofia</p>
@@ -114,7 +129,7 @@
                 <h2>Education and training</h2>
                 <ul>
                     <li class="exp-dates">
-                        <h3>2019 - Till now</h3>
+                        <h3>2019 - 2022</h3>
                         <div class="experience-details">
                             <h4>Softuni</h4>
                             <p>Title of qualification awarded:
