--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <h3>
                             Angular demo site:
                         </h3>
-                        <a href="https://teddy-dev.eu/" target="_blank">teddy-dev.eu</a>
+                        <a href="https://buy-and-sell-7485e.web.app/" target="_blank">Buy and sell</a>
                         <div class="demo-site-add-info">
                             <p>You can login with:</p>
                             <p>e-mail: <span>test@abv.bg</span></p>
